force-app/main/default/objects/Notification__c/fields/I_RS_Action_Link__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Action_Link__c</fullName>
    <inlineHelpText>A link for actioning the notification</inlineHelpText>
    <label>Action Link</label>
    <type>Url</type>
</CustomField>