force-app/main/default/objects/Notification__c/fields/I_RS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>