force-app/main/default/objects/Notification__c/fields/I_RS_Details__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>