force-app/main/default/objects/Notification__c/fields/I_RS_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>