force-app/main/default/objects/Notification__c/fields/I_RS_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>