force-app/main/default/objects/Notification__c/fields/I_RS_Help_Link__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Help_Link__c</fullName>
    <inlineHelpText>A link for help on the notification type</inlineHelpText>
    <label>Help Link</label>
    <type>Url</type>
</CustomField>