force-app/main/default/objects/Notification__c/fields/I_RS_Note__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>