force-app/main/default/objects/Notification__c/fields/I_RS_Target_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Target_Record_ID__c</fullName>
    <inlineHelpText>Fill this with Record&apos;s Id if the record to be actioned is in Salesforce. Populating this field will auto-generate the portal URL of the record and will be populated in &apos;Action Link&apos; field.</inlineHelpText>
    <label>Target Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>