force-app/main/default/objects/Notification__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researchers FoR Codes</fullName>
            </value>
            <value>
                <fullName>Publication FoR Codes</fullName>
            </value>
            <value>
                <fullName>Publication Claiming</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>