force-app/main/default/objects/Notification__c/validationRules/Assigned_To_related_user_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_To_related_user_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(I_RS_Assigned_To__r.I_RS_Related_User__c)</errorConditionFormula>
    <errorDisplayField>I_RS_Assigned_To__c</errorDisplayField>
    <errorMessage>The Contact you are using doesn&apos;t have a Related User, please make sure the &apos;Related User&apos; field is filled on the Contact record.</errorMessage>
</ValidationRule>