force-app/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Action_Link__c</columns>
    <columns>I_RS_Effective_Date__c</columns>
    <columns>I_RS_Expiry_Date__c</columns>
    <columns>I_RS_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>