force-app/main/default/objects/Notification__c/listViews/Due_Date_Greater_than_OR_Equal_to_TODAY.listView-meta.xml
<ListView>
    <fullName>Due_Date_Greater_than_OR_Equal_to_TODAY</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>I_RS_Assigned_To__c</columns>
    <columns>I_RS_Expiry_Date__c</columns>
    <columns>I_RS_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>I_RS_Expiry_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>I_RS_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Due Date Greater than OR Equal to TODAY</label>
</ListView>