force-app/main/default/objects/Notification__c/listViews/My_Notifications.listView-meta.xml
<ListView>
    <fullName>My_Notifications</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Action_Link__c</columns>
    <columns>I_RS_Details__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>I_RS_Status__c</field>
        <operation>notEqual</operation>
        <value>Dismissed,Closed</value>
    </filters>
    <filters>
        <field>I_RS_Expiry_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>I_RS_Effective_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>My Notifications</label>
</ListView>